--- a/hosts.ini
+++ b/hosts.ini
@@ -2,7 +2,7 @@
 vyos-router
 ansible_host=3.133.12.206
 ansible_user=vyos
-ansible_ssh_private_key_file=~/.ssh/my-aws-key.pem
+ansible_ssh_private_key_file=~/.ssh/authorized_keys
 
 [vyos:vars]
 ansible_connection=network_cli
